<resources>
    <string name="app_name">Admin</string>
    <string name="item_collection">Item Collection</string>
    <string name="place">Place</string>
    <string name="date_time">Date Time</string>
    <string name="qty">Qty</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="logs">Logs</string>

    <string name="report">รายงาน</string>
    <string name="report1">รายงานข้อมูลผู้เล่น</string>
    <string name="report2">รายงานการเก็บไอเทม(ผู้เล่นเดี่ยว)</string>
    <string name="report3">รายงานประวัติการเข้าสู่ระบบ</string>

    <string name="begin">Begin</string>
    <string name="end">End</string>
    <string name="state">State</string>
    <string name="offline">Offline</string>
    <string name="online">Online</string>

    <string name="search_data_not_found">Search data not found</string>
    <string name="name">Name</string>
    <string name="item">Item</string>
    <string name="locality">Locality</string>
    <string name="area">Area</string>
    <string name="sub_area">Sub area</string>
    <string name="date_in">Date In</string>
    <string name="time_in">Time In</string>
    <string name="date_out">Date Out</string>
    <string name="time_out">Time Out</string>

    <string name="toolbar">Toolbar</string>
    <string name="to">To</string>

    <string name="completed">Completed</string>
    <string name="failed">Failed</string>
    <string name="exit">Exit</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="finish_affinity">Press back again to exit</string>
    <string name="player">Player</string>

    <string name="player_id">Player Id</string>
    <string name="level">Level</string>
    <string name="search">Search</string>

    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
</resources>
