<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        style="@style/RelativeLayoutDialog"
        tools:context=".ui.itemcollection.ItemCollectionDialog">

    <LinearLayout
            style="@style/MatchWrap"
            android:orientation="vertical">

        <EditText
                style="@style/EditText"
                android:text="@string/name" />

        <LinearLayout
                style="@style/MatchWrap"
                android:layout_marginTop="@dimen/medium"
                android:background="@color/gray"
                android:padding="@dimen/medium">

            <TextView
                    style="@style/TextView"
                    android:text="@string/item" />

            <androidx.appcompat.widget.AppCompatSpinner
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/widgets"
                    android:layout_marginStart="@dimen/medium" />
        </LinearLayout>

        <LinearLayout
                style="@style/MatchWrap"
                android:layout_marginTop="@dimen/medium"
                android:background="@color/gray"
                android:padding="@dimen/medium">

            <TextView
                    style="@style/TextView"
                    android:text="@string/area" />

            <androidx.appcompat.widget.AppCompatSpinner
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/widgets"
                    android:layout_marginStart="@dimen/medium" />
        </LinearLayout>

        <LinearLayout
                style="@style/MatchWrap"
                android:layout_marginTop="@dimen/medium"
                android:background="@color/gray"
                android:padding="@dimen/medium">

            <TextView
                    style="@style/TextView"
                    android:text="@string/sub_area" />

            <androidx.appcompat.widget.AppCompatSpinner
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/widgets"
                    android:layout_marginStart="@dimen/medium" />
        </LinearLayout>

        <LinearLayout
                style="@style/MatchWrap"
                android:layout_marginTop="@dimen/medium"
                android:background="@color/gray"
                android:padding="@dimen/medium">

            <TextView
                    style="@style/TextView"
                    android:text="@string/locality" />

            <androidx.appcompat.widget.AppCompatSpinner
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/widgets"
                    android:layout_marginStart="@dimen/medium" />
        </LinearLayout>

        <GridLayout
                style="@style/MatchWrap"
                android:layout_marginTop="@dimen/medium"
                android:background="@color/gray"
                android:columnCount="4"
                android:padding="@dimen/medium"
                android:rowCount="5">

            <TextView
                    style="@style/TextView"
                    android:layout_columnSpan="4"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/date_time" />

            <TextView
                    style="@style/TextView"
                    android:layout_columnSpan="4"
                    android:text="@string/begin" />

            <ImageView
                    android:id="@+id/mIvDateBegin"
                    style="@style/ImageViewDate"
                    android:layout_columnWeight="10" />

            <TextView
                    android:id="@+id/mTvDateBegin"
                    style="@style/TextView"
                    android:layout_columnWeight="40"
                    android:layout_marginStart="@dimen/medium"
                    android:text="@string/date" />

            <ImageView
                    android:id="@+id/mIvTimeBegin"
                    style="@style/ImageViewTime"
                    android:layout_columnWeight="10" />

            <TextView
                    android:id="@+id/mTvTimeBegin"
                    style="@style/TextView"
                    android:layout_columnWeight="40"
                    android:layout_marginStart="@dimen/medium"
                    android:text="@string/time" />

            <TextView
                    style="@style/TextView"
                    android:layout_columnSpan="4"
                    android:text="@string/end" />

            <ImageView
                    android:id="@+id/mIvDateEnd"
                    style="@style/ImageViewDate"
                    android:layout_columnWeight="10" />

            <TextView
                    android:id="@+id/mTvDateEnd"
                    style="@style/TextView"
                    android:layout_columnWeight="40"
                    android:layout_marginStart="@dimen/medium"
                    android:text="@string/date" />

            <ImageView
                    android:id="@+id/mIvTimeEnd"
                    style="@style/ImageViewTime"
                    android:layout_columnWeight="10" />

            <TextView
                    android:id="@+id/mTvTimeEnd"
                    style="@style/TextView"
                    android:layout_columnWeight="40"
                    android:layout_marginStart="@dimen/medium"
                    android:text="@string/time" />
        </GridLayout>

        <Button
                android:id="@+id/mBtSearch"
                style="@style/Button"
                android:layout_gravity="center_horizontal"
                android:text="@string/search" />

    </LinearLayout>

</RelativeLayout>