<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        style="@style/RelativeLayoutDialog"
        tools:context=".ui.player.PlayerDialog">

    <LinearLayout
            style="@style/MatchWrap"
            android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout style="@style/MatchWrap">

            <EditText
                    android:id="@+id/mEtSearch"
                    style="@style/EditText"
                    android:drawableEnd="@drawable/ic_search_black"
                    android:hint="@string/search" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
                style="@style/MatchWrap"
                android:layout_marginTop="@dimen/medium"
                android:background="@color/gray"
                android:padding="@dimen/medium">

            <TextView
                    style="@style/TextView"
                    android:text="@string/level" />

            <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/mSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/widgets"
                    android:layout_marginStart="@dimen/medium" />
        </LinearLayout>

        <LinearLayout
                style="@style/MatchWrap"
                android:layout_marginTop="@dimen/medium"
                android:background="@color/gray"
                android:padding="@dimen/medium">

            <TextView
                    style="@style/TextView"
                    android:text="@string/state" />

            <CheckBox
                    android:id="@+id/mCheckOnline"
                    style="@style/WrapWrap"
                    android:layout_height="@dimen/widgets"
                    android:layout_marginStart="@dimen/large"
                    android:text="@string/online" />

            <CheckBox
                    android:id="@+id/mCheckOffline"
                    style="@style/WrapWrap"
                    android:layout_height="@dimen/widgets"
                    android:layout_marginStart="@dimen/large"
                    android:text="@string/offline" />

        </LinearLayout>

        <GridLayout
                style="@style/MatchWrap"
                android:layout_marginTop="@dimen/medium"
                android:background="@color/gray"
                android:columnCount="4"
                android:padding="@dimen/medium"
                android:rowCount="5">

            <TextView
                    style="@style/TextView"
                    android:layout_columnSpan="4"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/date_time" />

            <TextView
                    style="@style/TextView"
                    android:layout_columnSpan="4"
                    android:text="@string/begin" />

            <ImageView
                    android:id="@+id/mIvDateBegin"
                    style="@style/ImageViewDate"
                    android:layout_columnWeight="10" />

            <TextView
                    android:id="@+id/mTvDateBegin"
                    style="@style/TextView"
                    android:layout_columnWeight="40"
                    android:layout_marginStart="@dimen/medium"
                    android:text="@string/date" />

            <ImageView
                    android:id="@+id/mIvTimeBegin"
                    style="@style/ImageViewTime"
                    android:layout_columnWeight="10" />

            <TextView
                    android:id="@+id/mTvTimeBegin"
                    style="@style/TextView"
                    android:layout_columnWeight="40"
                    android:layout_marginStart="@dimen/medium"
                    android:text="@string/time" />

            <TextView
                    style="@style/TextView"
                    android:layout_columnSpan="4"
                    android:text="@string/end" />

            <ImageView
                    android:id="@+id/mIvDateEnd"
                    style="@style/ImageViewDate"
                    android:layout_columnWeight="10" />

            <TextView
                    android:id="@+id/mTvDateEnd"
                    style="@style/TextView"
                    android:layout_columnWeight="40"
                    android:layout_marginStart="@dimen/medium"
                    android:text="@string/date" />

            <ImageView
                    android:id="@+id/mIvTimeEnd"
                    style="@style/ImageViewTime"
                    android:layout_columnWeight="10" />

            <TextView
                    android:id="@+id/mTvTimeEnd"
                    style="@style/TextView"
                    android:layout_columnWeight="40"
                    android:layout_marginStart="@dimen/medium"
                    android:text="@string/time" />
        </GridLayout>

        <Button
                android:id="@+id/mBtSearch"
                style="@style/Button"
                android:layout_gravity="center_horizontal"
                android:text="@string/search" />

    </LinearLayout>

    <com.google.android.material.tabs.TabLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="156dp">

        <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Monday" />

        <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Tuesday" />

        <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Wednesday" />
    </com.google.android.material.tabs.TabLayout>

</RelativeLayout>