<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <ImageView
                android:id="@+id/ivImage"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_weight="15"
                android:src="@mipmap/ic_launcher_round" />

        <TextView
                android:id="@+id/tvName"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_weight="40"
                android:text="@string/name" />

        <GridLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="45"
                android:columnCount="2"
                android:rowCount="2">

            <TextView
                    android:id="@+id/tvDateIn"
                    style="@style/TextAppearance.AppCompat.Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date" />

            <TextView
                    android:id="@+id/tvTimeIn"
                    style="@style/TextAppearance.AppCompat.Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/time" />

            <TextView
                    android:id="@+id/tvDateOut"
                    style="@style/TextAppearance.AppCompat.Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date" />

            <TextView
                    android:id="@+id/tvTimeOut"
                    style="@style/TextAppearance.AppCompat.Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/time" />
        </GridLayout>

    </LinearLayout>

</RelativeLayout>
